Working on fixing the display code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div>Right click: Place block</div>
 	</div>
 	<script type="module">
-    import { Engine, World, Player, Renderer, BlockManager } from './js/modules.js';
+    import { Engine, World, Player, Renderer, Block } from './js/modules.js';
     
     async function initGame() {
         try {
