--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             
         } catch (error) {
             console.error('Game initialization failed:', error);
+			debugger;
         }
     }
 
